--- a/docker-compose.example
+++ b/docker-compose.example
@@ -1,5 +1,5 @@
-version: "3.9"
 services:
+
   redis:
     image: redis:latest
     command:
@@ -9,6 +9,7 @@ services:
     restart: on-failure
     ports:
       - "6379:6379"
+
   postgres:
     image: postgres
     env_file:
@@ -16,10 +17,11 @@ services:
     restart: on-failure
     ports:
       - "5432:5432"
-    # volumes:
-    #   - ~/postgres-data:/var/lib/postgresql/data
+    volumes:
+      - ~/postgres-data:/var/lib/postgresql/data
+
   nats:
-    image: nats
+    image: nats:latest
     entrypoint: /nats-server
     command: "-c /config/server.conf"
     ports:
@@ -28,3 +30,17 @@ services:
     volumes:
       - ./nats/data:/data
       - ./nats/config/server.conf:/config/server.conf
+  
+  nats-nui:
+    image: ghcr.io/nats-nui/nui:latest
+    container_name: nats-nui
+    ports:
+      - "31311:31311"  # Порт для доступа к NATS NUI
+    volumes:
+      - ./nui/db:/db
+    depends_on:
+      - nats
+
+volumes:
+  data:
+  config:
