refactor: Update Nats FSM Storage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,20 @@
 [tool.poetry]
 name = "aiogram-bot-template"
 version = "0.1.0"
-description = ""
+description = "Aiogram 3 bot template by kmsint"
 authors = ["kmsint <kmsrus@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-aiogram = "^3.3.0"
-environs = "^10.3.0"
-fluentogram = "^1.1.6"
-asyncpg = "^0.29.0"
-redis = "^5.0.1"
+aiogram = "^3.10.0"
+environs = "^11.0.0"
+nats-py = "^2.8.0"
+ormsgpack = "^1.5.0"
 aiogram-dialog = "^2.1.0"
-nats-py = "^2.7.0"
-ormsgpack = "^1.4.2"
+fluentogram = "^1.1.7"
+redis = "^5.0.7"
+asyncpg = "^0.29.0"
 
 
 [build-system]
