.env: Add new environment variables to the .env.example file

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ REDIS_TTL_STATE=None
 REDIS_TTL_DATA=None
 
 NATS_SERVERS=nats://localhost:4222
+
+NATS_DELAYED_CONSUMER_SUBJECT=aiogram.delayed.messages
+NATS_DELAYED_CONSUMER_STREAM=delayed_messages_aiogram
+NATS_DELAYED_CONSUMER_DURABLE_NAME=delayed_messages_consumer
