--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ asyncpg = "^0.29.0"
 alembic = "^1.13.2"
 
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.11.0"
+flake8 = "^7.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
