--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ fluentogram = "^1.1.7"
 redis = "^5.0.7"
 asyncpg = "^0.29.0"
 alembic = "^1.13.2"
+taskiq-aiogram = "^0.3.1"
+taskiq-nats = "^0.4.0"
 
 
 [build-system]
