--- a/docker-compose.example
+++ b/docker-compose.example
@@ -19,6 +19,17 @@ services:
       - "5432:5432"
     volumes:
       - ~/postgres-data:/var/lib/postgresql/data
+  
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4_container
+    restart: on-failure
+    ports:
+      - "8888:80"
+    env_file:
+      - .env
+    volumes:
+      - ./pgadmin-data:/var/lib/pgadmin
 
   nats:
     image: nats:latest
@@ -28,7 +39,7 @@ services:
       - "4222:4222"
       - "8222:8222"
     volumes:
-      - ./nats/data:/data
+      - ~/nats/data:/data
       - ./nats/config/server.conf:/config/server.conf
   
   nats-nui:
@@ -41,6 +52,6 @@ services:
     depends_on:
       - nats
 
-volumes:
-  data:
-  config:
+# volumes:
+#   data:
+#   config:
