readme: Change the project structure in the Structure section of the README.md file and update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
+ENV_FOR_DYNACONF=development
+
 BOT_TOKEN=5424991242:AAGwomxQz1p46bRi_2m3V7kvJlt5RjK9xr0
 ADMIN_IDS=173901673
 ADMINS_CHAT=173901673
-
-LOG_LEVEL=DEBUG
 
 POSTGRES_NAME=postgres
 POSTGRES_HOST=localhost
@@ -10,7 +10,9 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
-USE_CACHE=True
+PGADMIN_DEFAULT_EMAIL=kmsrus@gmail.com
+PGADMIN_DEFAULT_PASSWORD=strong-password
+
 REDIS_DATABASE=2
 REDIS_HOST=localhost
 REDIS_PORT=6379
@@ -18,9 +20,3 @@ REDIS_USERNAME=default
 REDIS_PASSWORD=default
 REDIS_TTL_STATE=None
 REDIS_TTL_DATA=None
-
-NATS_SERVERS=nats://localhost:4222
-
-NATS_DELAYED_CONSUMER_SUBJECT=aiogram.delayed.messages
-NATS_DELAYED_CONSUMER_STREAM=delayed_messages_aiogram
-NATS_DELAYED_CONSUMER_DURABLE_NAME=delayed_messages_consumer
