refactor: Replace asyncpg to psycopg

--- a/docker-compose.example
+++ b/docker-compose.example
@@ -18,7 +18,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ~/postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
   
   pgadmin:
     image: dpage/pgadmin4
@@ -39,7 +39,7 @@ services:
       - "4222:4222"
       - "8222:8222"
     volumes:
-      - ~/nats/data:/data
+      - ./nats/data:/data
       - ./nats/config/server.conf:/config/server.conf
   
   nats-nui:
