--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,12 @@ ormsgpack = "^1.5.0"
 aiogram-dialog = "^2.1.0"
 fluentogram = "^1.1.7"
 redis = "^5.0.7"
-asyncpg = "^0.29.0"
 alembic = "^1.13.2"
 taskiq-aiogram = "^0.3.1"
 taskiq-nats = "^0.4.0"
 dynaconf = "^3.2.6"
+psycopg = "^3.2.1"
+psycopg-pool = "^3.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
