--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ BOT_TOKEN=5424991242:AAGwomxQz1p46bRi_2m3V7kvJlt5RjK9xr0
 ADMIN_IDS=173901673
 ADMINS_CHAT=173901673
 
+POSTGRES_DB=postgres
 POSTGRES_NAME=postgres
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
