chore: Fix incorrect directory names in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -160,9 +160,10 @@ poetry.lock
 .DS_Store
 # .vscode
 /docker-compose.yml
-/nui/
+.nui_data/
+.pgadmin_data/
+.postgres_data/
+.redis_data/
 .nats_data/
-.postgres-data/
-.pgadmin-data/
 
 test_*.py
