chore: Add missing variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,10 @@ REDIS_USERNAME=default
 REDIS_PASSWORD=default
 REDIS_TTL_STATE=None
 REDIS_TTL_DATA=None
+
+NATS_PORT=4222
+NATS_MONITORING_PORT=8222
+
+NUI_PORT=31311
+NUI_USERNAME=admin
+NUI_PASSWORD=secure_password
